--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 plugins {
     id("com.diffplug.spotless") version "6.13.0"
+    id("org.jreleaser") version "1.19.0"
 }
+
+ext {
+    projectGroup = 'com.scalar-labs'
+    projectVersion = '3.12.0-SNAPSHOT'
+}
+
+group = projectGroup
+version = projectVersion
 
 subprojects {
     apply plugin: 'java'
@@ -10,7 +19,8 @@ subprojects {
     apply plugin: 'java-library-distribution'
     apply plugin: 'com.diffplug.spotless'
 
-    project.version = '3.12.0-SNAPSHOT'
+    group = projectGroup
+    project.version = projectVersion
 
     ext {
         grpcVersion = '1.73.0'
@@ -85,8 +95,6 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    group = "com.scalar-labs"
-
     distZip {
         archiveFileName = "${project.name}.zip"
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -111,5 +119,41 @@ subprojects {
     task dockerfileLint(type: Exec) {
         description 'Lint the Dockerfile'
         executable "${rootDir}/scripts/docker/lint.sh"
+    }
+}
+
+jreleaser {
+    gitRootSearch = true
+
+    signing {
+        active = 'ALWAYS'
+        armored = true
+    }
+
+    deploy {
+        maven {
+            def stagingRepositories = ['client/build/staging-deploy',
+                                       'common/build/staging-deploy',
+                                       'ledger/build/staging-deploy',
+                                       'rpc/build/staging-deploy']
+            mavenCentral {
+                'release-deploy' {
+                    active = 'RELEASE'
+                    url = 'https://central.sonatype.com/api/v1/publisher'
+                    stagingRepositories.each { stagingRepository(it) }
+                }
+            }
+            nexus2 {
+                'snapshot-deploy' {
+                    active = 'SNAPSHOT'
+                    snapshotUrl = 'https://central.sonatype.com/repository/maven-snapshots/'
+                    applyMavenCentralRules = true
+                    snapshotSupported = true
+                    closeRepository = true
+                    releaseRepository = true
+                    stagingRepositories.each { stagingRepository(it) }
+                }
+            }
+        }
     }
 }
