--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 ext {
     projectGroup = 'com.scalar-labs'
-    projectVersion = '3.12.0'
+    projectVersion = '3.12.1-SNAPSHOT'
 }
 
 group = projectGroup
