--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 ext {
     projectGroup = 'com.scalar-labs'
-    projectVersion = '3.12.2-SNAPSHOT'
+    projectVersion = '3.12.2'
 }
 
 group = projectGroup
