--- a/.github/workflows/storage-compatibility-check.yaml
+++ b/.github/workflows/storage-compatibility-check.yaml
@@ -148,3 +148,52 @@ jobs:
           java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" \
           -Dscalardb.storage=dynamo \
           org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
+
+  integration-test-with-blob-storage:
+    name: Integration testing with the Consensus Commit transaction manager on Blob Storage
+    runs-on: ubuntu-latest
+
+    services:
+      blob-storage:
+        image: mcr.microsoft.com/azure-storage/azurite
+        env:
+          AZURITE_ACCOUNTS: "test:test"
+        ports:
+          - 10000:10000
+
+    steps:
+      - name: Checkout the target repository
+        uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.target-ref }}
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v5
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v5
+
+      - name: Build
+        run: |
+          ./gradlew assemble
+          ./gradlew testJar
+
+      - name: Create Blob Storage container
+        run: |
+          az storage container create \
+            --name test-container \
+            --connection-string "DefaultEndpointsProtocol=http;AccountName=test;AccountKey=test;BlobEndpoint=http://localhost:10000/test;"
+
+      # due to a gradle bug we must run the integration test separately
+      - name: Run integration tests
+        working-directory: ledger
+        run: |
+          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" \
+          -Dscalardb.storage=blob-storage \
+          -Dscalardb.contact_points=http://localhost:10000/test/test-container \
+          -Dscalardb.username=test \
+          -Dscalardb.password=test \
+          org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
